<resources>
    <string name="app_name">Calc</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="percent">%</string>
    <string name="_C">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mul">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="change">&#10004;</string>
    <string name="day">DAY</string>
    <string name="night">NIGHT</string>
</resources>