<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_image33"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/edit_text_back"
        android:gravity="center"
        android:lines="2"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/button_close_bracket"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_open_bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/open_bracket"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_close_bracket"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/button_close_bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/close_bracket"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintLeft_toRightOf="@id/button_open_bracket"
        app:layout_constraintRight_toLeftOf="@id/button_percent"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/percent"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintLeft_toRightOf="@id/button_close_bracket"
        app:layout_constraintRight_toLeftOf="@id/button_C"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/button_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_red"
        android:padding="16dp"
        android:text="@string/_C"
        app:layout_constraintBottom_toTopOf="@id/button_div"
        app:layout_constraintLeft_toRightOf="@id/button_percent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_open_bracket" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintLeft_toRightOf="@id/button_7"
        app:layout_constraintRight_toLeftOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_close_bracket" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintLeft_toRightOf="@id/button_8"
        app:layout_constraintRight_toLeftOf="@id/button_div"
        app:layout_constraintTop_toBottomOf="@+id/button_percent" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_green"
        android:padding="16dp"
        android:text="@string/div"
        app:layout_constraintBottom_toTopOf="@id/button_mul"
        app:layout_constraintLeft_toRightOf="@id/button_9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_C" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintLeft_toRightOf="@id/button_4"
        app:layout_constraintRight_toLeftOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintLeft_toRightOf="@id/button_5"
        app:layout_constraintRight_toLeftOf="@id/button_mul"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_green"
        android:padding="16dp"
        android:text="@string/mul"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintLeft_toRightOf="@id/button_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintLeft_toRightOf="@id/button_1"
        app:layout_constraintRight_toLeftOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintLeft_toRightOf="@id/button_2"
        app:layout_constraintRight_toLeftOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_green"
        android:padding="16dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintLeft_toRightOf="@id/button_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mul" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:padding="16dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_point"
        app:layout_constraintRight_toLeftOf="@id/button_equal"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_orange"
        android:padding="16dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_0"
        app:layout_constraintRight_toLeftOf="@id/button_plus"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_green"
        android:padding="16dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_equal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

</androidx.constraintlayout.widget.ConstraintLayout>